--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
+#Database
 spring.datasource.url=jdbc:mysql://localhost:3306/hotel
 spring.datasource.username=root
-spring.datasource.password=anhanh1
+spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
+#Hibernate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.properties.hibernate.id.new_generator_mappings =true
 spring.jpa.properties.hibernate.show.sql =true
@@ -12,3 +13,15 @@ spring.jpa.properties.hibernate.hb2dll.auto =update
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 server.port=${port:8011}
+#email
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.username=vuongvantu2001x@gmail.com
+spring.mail.password=01232322723q
+spring.mail.properties.debug=true
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.socketFactory.fallback=false
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
