--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #Database
 spring.datasource.url=jdbc:mysql://localhost:3306/hotel
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=anhanh1
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #Hibernate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
@@ -25,3 +25,7 @@ spring.mail.properties.mail.smtp.socketFactory.fallback=false
 spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
+spring.servlet.multipart.max-file-size=1MB
+spring.servlet.multipart.max-request-size=5MB
+
+spring.thymeleaf.cache=false
